--- a/H&M/Fade.html
+++ b/H&M/Fade.html
@@ -71,11 +71,11 @@
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/flKDb9U.jpg)
+            background-image: url(https://i.imgur.com/xGuoOW2.jpg)
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/vc8JFSi.jpg)
+            background-image: url(https://i.imgur.com/gqDR0ii.jpg)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -267,8 +267,8 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><a href="https://goo.gl/maps/FZ6iKWbjnhq" target="_blank"> <img src="https://i.imgur.com/ViMLmas.png" style="height:45px;"></a></div>
-        <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" style="display: block;" target="_blank">
+        <div class="cta"><a href="https://goo.gl/maps/cYPcEHkGfiv" target="_blank"> <img src="https://i.imgur.com/ViMLmas.png" style="height:45px;"></a></div>
+        <a href="https://www.hm.com/mx/" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
