--- a/H&M/Fade.html
+++ b/H&M/Fade.html
@@ -274,7 +274,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;text-align:center;"> ¿Ya sabes donde adquirir tu look favorito? ¡Ven a H&M!</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;text-align:center;"> ¿Ya sabes dónde adquirir tu look favorito? ¡Ven a H&M!</span></div>
             <div style="bottom:0px;height:30px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/P2bTbkX.jpg" style="height:40px;margin-top:-3px;">
                
                 
