--- a/HP/Venetian.html
+++ b/HP/Venetian.html
@@ -2270,9 +2270,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/jItZxw4.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/TbjDyng.jpg"></dataimg>
 <!--#/#--><!--#i2.i32.slice-image.html:slice-image/html.1-->
-<dataimg id="i32" src="https://i.imgur.com/TEJlGa5.jpg"></dataimg>
+<dataimg id="i32" src="https://i.imgur.com/cmgPza5.jpg"></dataimg>
+<!--#/#--><!--#i2.i39.slice-image.html:slice-image/html.1-->
+<dataimg id="i39" src="https://i.imgur.com/hvlTpit.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i35.shape.html:shape/html-->
@@ -2333,14 +2335,16 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i32.slice-image.js:slice-image/base/js.1*/
 
+/*#/#*//*#i2.i39.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i35.i36.positioning.js:positioning/base/js.2*/
 bmShow('i35');
-/*#/#*//*#i35.i37.actions.js:actions/base/js.1*/
+/*#/#*//*#i35.i40.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i35');
 
 el.addEventListener('click', function(e){
-    /*#i37.i38.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i40.i41.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www8.hp.com/mx/es/cartridge/ink.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2386,9 +2390,12 @@ data: /*!*/{"keepAspectRatio":false}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: jItZxw4.png; fileId: ; sourceTypeId: externalUrl;
+name: TbjDyng.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i32.slice-image.meta:slice-image/meta.1*/
-name: TEJlGa5.jpg; fileId: ; sourceTypeId: externalUrl;
+name: cmgPza5.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
+/*#/#*//*#i2.i39.slice-image.meta:slice-image/meta.1*/
+name: hvlTpit.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
