--- a/HP/Venetian.html
+++ b/HP/Venetian.html
@@ -2270,9 +2270,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/TbjDyng.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/8R8yO7r.jpg"></dataimg>
 <!--#/#--><!--#i2.i32.slice-image.html:slice-image/html.1-->
-<dataimg id="i32" src="https://i.imgur.com/cmgPza5.jpg"></dataimg>
+<dataimg id="i32" src="https://i.imgur.com/JbJFUXV.jpg"></dataimg>
 <!--#/#--><!--#i2.i39.slice-image.html:slice-image/html.1-->
 <dataimg id="i39" src="https://i.imgur.com/hvlTpit.jpg"></dataimg>
 <!--#/#-->
