--- a/HP/Venetian.html
+++ b/HP/Venetian.html
@@ -2274,7 +2274,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i32.slice-image.html:slice-image/html.1-->
 <dataimg id="i32" src="https://i.imgur.com/JbJFUXV.jpg"></dataimg>
 <!--#/#--><!--#i2.i39.slice-image.html:slice-image/html.1-->
-<dataimg id="i39" src="https://i.imgur.com/hvlTpit.jpg"></dataimg>
+<dataimg id="i39" src="https://i.imgur.com/sroq3Ln.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i35.shape.html:shape/html-->
