--- a/SuperVia/Venetian.html
+++ b/SuperVia/Venetian.html
@@ -2265,8 +2265,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">3 razones para usar la Supervía en Santa Fe.</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">1. Ahorra más de 30 min. en tus desplazamientos hasta/desde Santa Fe.
-2. La via más libre de accidentes de todo CDMX.
+<div id="i12">1. Ahorra más de 30 min. en tus desplazamientos hasta/desde Santa Fe.<br>
+2. La via más libre de accidentes de todo CDMX. <br>
 3. Comodidad. Libre de semaforos y congestiones.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/Iv4guyI.png"/>
