--- a/SuperVia/Venetian.html
+++ b/SuperVia/Venetian.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
-<meta charset="UTF-8">
+<meta charset="utf-8" />
 <!-- Adform API Script -->
 <script type="text/javascript">
 document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv='+ Math.random()) +'"><\/script>');
@@ -2189,6 +2189,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i32.image.css:image/base/css*/
+#i32 { opacity: 1; }
+/*#/#*//*#i32.i33.positioning.css:positioning/base/css.2*/
+#i32 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 265px; height: 149px;
+        -ms-transform: translate(0, 0) translate(21px, 427px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(21px, 427px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(21px, 427px) rotate(0deg);
+        transform: translate(0, 0) translate(21px, 427px) rotate(0deg);
+}
 /*#/#*//*#i7.text.css:text/base/css*/
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 23px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
@@ -2197,15 +2206,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(8px, 387px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(8px, 387px) rotate(0deg);
         transform: translate(0, 0) translate(8px, 387px) rotate(0deg);
-}
-/*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 265px; height: 118px;
-        -ms-transform: translate(0, 0) translate(18px, 445px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(18px, 445px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(18px, 445px) rotate(0deg);
-        transform: translate(0, 0) translate(18px, 445px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
@@ -2262,12 +2262,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
+<!--#/#--><!--#i32.image.html:image/html-->
+<img id="i32" src="https://i.imgur.com/oPUOWCc.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">3 razones para usar la Supervía en Santa Fe.</div>
-<!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">1. Ahorra más de 30 min. en tus desplazamientos hasta/desde Santa Fe.<br>
-2. La via más libre de accidentes de todo CDMX. <br>
-3. Comodidad. Libre de semaforos y congestiones.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/Iv4guyI.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2288,10 +2286,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
+/*#/#*//*#i32.image.js:image/base/js*/
+
+/*#/#*//*#i32.i33.positioning.js:positioning/base/js.2*/
+bmShow('i32');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
-/*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
-bmShow('i12');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2374,13 +2374,14 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i32.image.meta:image/meta*/
+name: oPUOWCc.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i32.i33.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
 name: 3 razones para usar la Supervía en Santa Fe.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i12.text.meta:text/meta*/
-name: 1. Ahorra más de 30 min. en tus desplazamientos hasta/desde Santa Fe. 2. La via más libre de accidentes de todo CDMX. 3. Comodidad. Libre de semaforos y congestiones.; customName: false;
-/*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: Iv4guyI.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
