--- a/Kipling/Fade-Gif.html
+++ b/Kipling/Fade-Gif.html
@@ -240,7 +240,7 @@
 						</span>
                        <span class="bzm_text_medium" style="color: black;line-height:em; font-size:19px; width:95%; text-align:justify;">
                         <p style="margin-top: 3px; line-height: 1.3em; margin-left: 3px; ">
-                           Estamos cerca de tí. ¡Encuentranos en <b>Antara Fashion Hall! </b></p>
+                           Estamos cerca de tí. ¡Encuéntranos en <b>Antara Fashion Hall! </b></p>
 
    <div class="cta">  <a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"> 
        <span class="bzm_text_title bzm_text_bold" style="font-size:88%; color: white;">¡¡LLÉVAME A KIPLING!! </span></a></div>
