--- a/Kipling/Fade.html
+++ b/Kipling/Fade.html
@@ -268,13 +268,13 @@
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
         <div class="cta"><a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"> <img src="https://i.imgur.com/YQ3iHws.png" style="height:45px;"></a></div>
-        <a href="http://www.antara.com.mx/tienda/ver/kipling" style="display: block;" target="_blank">
+        <a href="" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:19px;text-align:center;"> ¿Ya viste lo cerca que estas de tu nuevo Kipling?</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:19px;text-align:center;"> ¿Ya viste lo cerca que estás de tu nuevo Kipling?</span></div>
             <div style="bottom:0px;height:30px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/GZeDGoL.png" style="height:30px;margin-top:-1px;">
 
                  <div id="botones-para-compartir" style="display:inline;float:left;margin-left:10px;margin-top:-25px;">
