--- a/Kipling/Fade-Gif.html
+++ b/Kipling/Fade-Gif.html
@@ -236,7 +236,7 @@
                 <div style="margin-top:2px; margin-left: 2px; margin-right: 10px;">
                     <div class="bzm_text">
                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:26px; margin-left:0px; margin-right:0px; Margin-top:10px; text-align: left; width: 90%;">
-						    Nos inspiramos para el, para ella, para todos.
+						    Nos inspiramos para él, para ella, para todos.
 						</span>
                        <span class="bzm_text_medium" style="color: black;line-height:em; font-size:19px; width:95%; text-align:justify;">
                         <p style="margin-top: 3px; line-height: 1.3em; margin-left: 3px; ">
