--- a/MININO PLUS/Cube.html
+++ b/MININO PLUS/Cube.html
@@ -900,7 +900,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Para una Mirada brillante.</div>
+<div id="i24">Para una mirada brillante.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/C9c9VCr.jpg"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
