--- a/MININO PLUS/fade.html
+++ b/MININO PLUS/fade.html
@@ -329,7 +329,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               ¿Te preocupa la nutrición y bienestar de tu mínino?
+               ¿Te preocupa la nutrición y bienestar de tu minino?
             </span>
             <br/>  
             
