--- a/Cheese Cake Factory/Cube.html
+++ b/Cheese Cake Factory/Cube.html
@@ -902,7 +902,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/ASWhqUe.png"/>
 <!--#/#--><!--#i5.i194.text.html:text/html-->
-<div id="i194">Encuentra lo que amas y comételo.</div>
+<div id="i194">Encuentra lo que amas y cómetelo.</div>
 <!--#/#--><!--#i5.i198.image.html:image/html-->
 <img id="i198" src="https://i.imgur.com/HX42xoE.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
