--- a/Cheese Cake Factory/Venetian.html
+++ b/Cheese Cake Factory/Venetian.html
@@ -2282,7 +2282,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/31aHJB1.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Falta 4 días para 30 cheesecakes a mitad de precio.</div>
+<div id="i63">Faltan 4 días para 30 cheesecakes a mitad de precio.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">Del 27 de Febrero al 3 de Marzo en Centro Comercial Santa Fe.</div>
 <!--#/#--><!--#i70.container.html:container/html-->
