--- a/H&M/Fade.html
+++ b/H&M/Fade.html
@@ -267,7 +267,7 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><a href="https://goo.gl/maps/cYPcEHkGfiv" target="_blank"> <img src="https://i.imgur.com/ViMLmas.png" style="height:45px;"></a></div>
+        <div class="cta"><a href="https://goo.gl/maps/DUKV5QXZzmT2" target="_blank"> <img src="https://i.imgur.com/ViMLmas.png" style="height:45px;"></a></div>
         <a href="https://www.hm.com/mx/" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
