--- a/Cinemex Platino/hover-text-big2.html
+++ b/Cinemex Platino/hover-text-big2.html
@@ -103,7 +103,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/3FBkkpU.gifv">
+                <img src="https://i.imgur.com/3FBkkpU.gif">
             </div>
 
 
