--- a/H&M/hover-text-big2.html
+++ b/H&M/hover-text-big2.html
@@ -103,7 +103,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/zikm5JE.gif">
+                <img src="https://i.imgur.com/KaX26y5.gif">
             </div>
 
 
