--- a/H&M/Venetian.html
+++ b/H&M/Venetian.html
@@ -2149,8 +2149,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i44.image.css:image/base/css*/
-#i44 { opacity: 1; }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
@@ -2160,6 +2158,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
         transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
 }
+/*#/#*//*#i44.image.css:image/base/css*/
+#i44 { opacity: 1; }
 /*#/#*//*#slice.css:slice/globalcss*/
 
 /* nav controls*/
@@ -2256,11 +2256,21 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i68 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 15%;
-        -ms-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 70.41666666666667%;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+}
+/*#/#*//*#i73.shape.css:shape/base/css*/
+#i73 { background-color: ; opacity: 1;
+}
+/*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
+#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 22.083333333333332%;
+        -ms-transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2280,10 +2290,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i72" src="https://i.imgur.com/qKNHjx9.jpg"></dataimg>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/kwxr1mX.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/P2bTbkX.jpg"/>
+<!--#/#--><!--#i44.image.html:image/html-->
+<img id="i44" src="https://i.imgur.com/kwxr1mX.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
@@ -2292,6 +2302,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i65">¡Ven a H&M y encuentra tu look ideal!</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
+<!--#/#--><!--#i73.shape.html:shape/html-->
+<div id="i73"></div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2342,55 +2354,18 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
 
-/*#/#*//*#i2.i57.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i2');
-
-el.addEventListener('click', function(e){
-    /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i44.image.js:image/base/js*/
-
-/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
-bmShow('i44');
-/*#/#*//*#i44.i48.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i44');
-
-el.addEventListener('click', function(e){
-    /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/DUKV5QXZzmT2'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
+/*#/#*//*#i44.image.js:image/base/js*/
+
+/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
+bmShow('i44');
 /*#/#*//*#i46.image.js:image/base/js*/
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i46.i50.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i46');
-
-
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i50.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/DUKV5QXZzmT2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
 /*#/#*//*#i65.i66.positioning.js:positioning/base/js.2*/
@@ -2404,6 +2379,21 @@ var el = document.getElementById('i68');
 el.addEventListener('click', function(e){
     /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
+bmShow('i73');
+/*#/#*//*#i73.i75.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i73');
+
+el.addEventListener('click', function(e){
+    /*#i75.i76.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/DUKV5QXZzmT2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2441,16 +2431,16 @@ name: qKNHjx9.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i44.image.meta:image/meta*/
-name: kwxr1mX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: P2bTbkX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
+/*#/#*//*#i44.image.meta:image/meta*/
+name: kwxr1mX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
 name: ViMLmas.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -2467,5 +2457,9 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i68.shape.meta:shape/meta*/
 name: Shape 2;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i73.shape.meta:shape/meta*/
+name: Shape 3;
+/*#/#*//*#i73.i74.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
