--- a/Cinemex Platino/hover-text-big2.html
+++ b/Cinemex Platino/hover-text-big2.html
@@ -109,7 +109,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/kyGUSTwcgSK2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/wbMg4mP.png"> </a></div>
+                <a href="https://goo.gl/maps/yJNPKBKPDpF2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/N77EMqZ.png"> </a></div>
 
              
 
