--- a/Cheese Cake Factory/Cube.html
+++ b/Cheese Cake Factory/Cube.html
@@ -922,7 +922,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/rjcBbK8.png"/>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
-<div id="i196">Con platillos como este es difícil no volver.</div>
+<div id="i196">Con platillos como éste es difícil no volver.</div>
 <!--#/#--><!--#i6.i200.image.html:image/html-->
 <img id="i200" src="https://i.imgur.com/HX42xoE.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
