--- a/Cheese Cake Factory/fade-completo.html
+++ b/Cheese Cake Factory/fade-completo.html
@@ -81,7 +81,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/FTF9hrZ.png");
+            background: url("https://i.imgur.com/dCThFho.png");
             background-size: cover;
 
         }
