CORRECCION LA COSTENA

--- a/La costena/300x600/ZoomExp300x600.html
+++ b/La costena/300x600/ZoomExp300x600.html
@@ -175,7 +175,8 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:17px;  text-decoration: none;">¿Ya viste todos los ricos platillos que puedes preparar con La Ensalada de Verduras La Costeña? ¡Como nunca los habías probado!</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:17px;  text-decoration: none;">¿Ya viste todos los ricos platillos que puedes preparar con la ensalada de verduras? Haz tu vida más fácil con La Costeña.
+</span><br>
 
                
                    </div>
