--- a/La costena/fadesmall.html
+++ b/La costena/fadesmall.html
@@ -107,7 +107,7 @@
             padding: 6px 0 0 .3em;
             line-height: 1.1;
             color: #000;
-            text-align: left;
+            text-align: center;
             margin-top: 10px;
             width: 99%;
             
@@ -274,9 +274,9 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:15px;text-align:left;"> Los Frijoles Bayos La Costeña le darán ese toque a tus recetas que te fascinará.</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:6px; margin-right: 5px;"> <img src="https://i.imgur.com/z6Wi6Hv.png" style="height:35px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-32px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.lacostena.com.mx/es/recetas/morisqueta-con-costillas/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/7NcsJOE.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.lacostena.com.mx/es/recetas/morisqueta-con-costillas/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/pb0ckbL.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.lacostena.com.mx/es/recetas/morisqueta-con-costillas/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/5FTo81p.png" title="compartir en twitter" width="22" /></a> </span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;text-align:left;"> Los frijoles bayos le darán ese toque a tus recetas, haz tu vida más fácil con La Costeña.
+            <div style="bottom:0px;height:40px;text-align:right ;margin-top:-6px; margin-right: 5px;"> <img src="https://i.imgur.com/z6Wi6Hv.png" style="height:35px;">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-35px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.lacostena.com.mx/es/recetas/morisqueta-con-costillas/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/7NcsJOE.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.lacostena.com.mx/es/recetas/morisqueta-con-costillas/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/pb0ckbL.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.lacostena.com.mx/es/recetas/morisqueta-con-costillas/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/5FTo81p.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
