--- a/La costena/videobigprueba.html
+++ b/La costena/videobigprueba.html
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 28px;
+            top: 10px;
             left: 5px;
             width: 90%;
             padding: 0.3em;
@@ -310,10 +310,10 @@
            
         <div class="tgx_text">
             <span class="tgx_text_title tgx_text_bold">
-              ¿ Aún no sabes que cocinar? Descubre todo lo que puedes cocinar con nuestros Frijoles Bayos La Costeña.
+              ¿ Aún no sabes que cocinar? Descubre todo lo que puedes cocinar con nuestros Frijoles Bayos. Haz tu vida más fácil con La Costeña.
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 10px; text-align: justify;"> Los frijoles bayos, de suave textura y sabor, son ideales para acompañar tus platillos méxicanos. ¡Mira nuestra variedad de recetas para tí!</p>
+                <p style="margin-top: 10px; text-align: justify;"> <B>Los Frijoles Bayos,</B> de suave textura y sabor, son ideales para acompañar tus platillos méxicanos. ¡Mira nuestra<B>variedad de recetas</B>para tí! <B></p>
             </span>
  
            
