--- a/Van Gogh/CubeCinemex.html
+++ b/Van Gogh/CubeCinemex.html
@@ -520,10 +520,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -533,6 +533,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i248.image.css:image/base/css*/
+#i248 { opacity: 1; }
+/*#/#*//*#i248.i249.positioning.css:positioning/base/css.2*/
+#i248 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 141px; height: 39px;
+        -ms-transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
+        transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -769,19 +778,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i196 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i196.i197.positioning.css:positioning/base/css.1*/
 #i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
 }
 /*#/#*//*#i6.i232.image.css:image/base/css*/
 #i232 { opacity: 1; }
 /*#/#*//*#i232.i233.positioning.css:positioning/base/css.2*/
 #i232 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 73px; height: 52px;
-        -ms-transform: translate(0, 0) translate(228px, 199px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(228px, 199px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(228px, 199px) rotate(0deg);
-        transform: translate(0, 0) translate(228px, 199px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(227px, 197px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(227px, 197px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(227px, 197px) rotate(0deg);
+        transform: translate(0, 0) translate(227px, 197px) rotate(0deg);
+}
+/*#/#*//*#i6.i250.image.css:image/base/css*/
+#i250 { opacity: 1; }
+/*#/#*//*#i250.i251.positioning.css:positioning/base/css.2*/
+#i250 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 141px; height: 39px;
+        -ms-transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
+        transform: translate(0, 0) translate(80px, 138px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -789,7 +807,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i179.i180.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i99 { cursor: pointer; }
 /*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
-#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 39.2%;
+#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -849,6 +867,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i14">Van Gogh, en la puerta de la eternidad.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/l11oElc.png"/>
+<!--#/#--><!--#i4.i248.image.html:image/html-->
+<img id="i248" src="https://i.imgur.com/q1snbv1.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i234.image.html:image/html-->
@@ -881,6 +901,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i196">¿Sabes quien era este pintor en realidad?</div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
 <img id="i232" src="https://i.imgur.com/qHgveCf.png"/>
+<!--#/#--><!--#i6.i250.image.html:image/html-->
+<img id="i250" src="https://i.imgur.com/q1snbv1.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i212.image.html:image/html-->
@@ -934,6 +956,10 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 bmShow('i181');
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
+/*#/#*//*#i4.i248.image.js:image/base/js*/
+
+/*#/#*//*#i248.i249.positioning.js:positioning/base/js.2*/
+bmShow('i248');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -1021,6 +1047,10 @@ document.getElementById('i95').addEventListener('click', function(e){
 
 /*#/#*//*#i232.i233.positioning.js:positioning/base/js.2*/
 bmShow('i232');
+/*#/#*//*#i6.i250.image.js:image/base/js*/
+
+/*#/#*//*#i250.i251.positioning.js:positioning/base/js.2*/
+bmShow('i250');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -1129,6 +1159,11 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i248.image.meta:image/meta*/
+name: q1snbv1.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i248.i249.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -1187,6 +1222,11 @@ data: /*!*/{}/*!*/;
 name: qHgveCf.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i232.i233.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i250.image.meta:image/meta*/
+name: q1snbv1.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i250.i251.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
