--- a/Van Gogh/CubeCinemex.html
+++ b/Van Gogh/CubeCinemex.html
@@ -898,7 +898,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/SzpJfi0.png"/>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
-<div id="i196">¿Sabes quien era este pintor en realidad?</div>
+<div id="i196">¿Sabes quién era este pintor en realidad?</div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
 <img id="i232" src="https://i.imgur.com/qHgveCf.png"/>
 <!--#/#--><!--#i6.i250.image.html:image/html-->
