--- a/Van Gogh/CubeCinepolis.html
+++ b/Van Gogh/CubeCinepolis.html
@@ -884,7 +884,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/YmxwvFX.png"/>
+<img id="i58" src="https://i.imgur.com/J40rruo.png"/>
 <!--#/#--><!--#i5.i246.image.html:image/html-->
 <img id="i246" src="https://i.imgur.com/ZIGq1DH.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
