--- a/Van Gogh/CubeCinepolis.html
+++ b/Van Gogh/CubeCinepolis.html
@@ -517,13 +517,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(164px, 218px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -8px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -884,7 +884,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/J40rruo.png"/>
+<img id="i58" src="https://i.imgur.com/YmxwvFX.png"/>
 <!--#/#--><!--#i5.i246.image.html:image/html-->
 <img id="i246" src="https://i.imgur.com/ZIGq1DH.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
